--- a/modulde1/ss3/bai tap/bai tap 2.html
+++ b/modulde1/ss3/bai tap/bai tap 2.html
@@ -2,9 +2,120 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Shop Dreamer</title>
 </head>
 <body>
-$END$
+<h1>Market Research Survey</h1>
+<label>Plese take a few moments to complete this satisfaction survey</label>
+<table>
+    <tr>
+        <td>
+            <label><h3>What is your age range?</label><br>
+
+            <select name="age"/>
+                <option value="HN" 18-24</option>
+                <option value="HP">25-34</option>
+                <option value="HU">35-50</option>
+                <option value="DN">50+</option>
+            </select>
+        </td>
+    </tr>
+</table>
+<table>
+    <tr>
+        <td>
+            <label>What is your yearly incom ramge?</label>
+            <select name="giá tiền">
+                <option>$0-$25,000</option>
+                <option>$25,001-$50,000</option>
+                <option>$50,001-100,000</option>
+                <option>$100.000+</option>
+            </select>
+        </td>
+    </tr>
+</table>
+<table>
+    <tr>
+        <td>
+            <label><h3>Gender Idenity</label>
+        <br>
+            <td>
+        <input type="radio">Male
+        <br>
+        <input type="radio">Female
+
+        </td>
+    </tr>
+</table>
+<tr>
+    <td>
+        <label><h3>Which of the following products have your putchased in the last 2 months.Please check all that apply:</h3></label>
+        <input type="checkbox">Production 1<br>
+        <input type="checkbox">Production 2<br>
+        <input type="checkbox">Production 3
+    </td>
+</tr>
+</table>
+<table>
+    <tr>
+        <td>
+            <label><h3>How often would you use our new produc?</h3></label>
+            <input type="radio">Daily<br>
+            <input type="radio">Weekly<br>
+            <input type="radio">Monthly
+        </td>
+    </tr>
+</table>
+<table>
+    <tr>
+        <td>
+            <label><h3>What would you pay for the new product?</h3></label>
+            <input type="text"dollars
+        </td>
+    </tr>
+</table>
+<table>
+    <tr>
+        <td>
+            <label><h3>What features would you like to see in the new product</h3></label><br>
+            <td>
+        <br>
+        <textarea cols="80" rows="10"></textarea>
+        </td>
+    </tr>
+</table>
+<label>Please rate your level of agreement with the following statements </label>
+    <table border=""5
+           <tr>
+               <th>Intruction</th>
+               <th>Strongly Disagree</th>
+               <th>Disagree</th>
+               <th>Agree</th>
+               <th>Strongly Agree</th>
+           </tr>
+<tr><td>Our products are priced fairly</td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+</tr>
+<tr>
+    <td>Our products are high quality</td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+</tr>
+<tr>
+    <td>You would recommend our product to a friend or coworker</td>
+    <td>Our products are high quality</td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+    <td><input type="radio" </td>
+</tr>
+    </table>
+<input type="submit" value="Submit"
+
 </body>
 </html>
