--- a/modulde1/ss3/bai tap/bt1.html
+++ b/modulde1/ss3/bai tap/bt1.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>hoxuanbao</title>
 </head>
 <body>
-$END$
+<table style="border:5px solid aqua" ; width="1045px">
+    <tr>
+    <td>
+        <form method="get" action="github.com"></form>
+        <h1 style="background:orange ">Sở thích của bạn</h1>
+
+        <table>
+            <tr>
+                <td>
+                    <pre> họ và tên </pre>
+                </td>
+                <td>
+                    <input type="text"/>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <pre>Email</pre>
+                <td>
+                    <input type="text"/>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr style="border: aqua">
+                <td>
+                    <label>SỞ thích:</label>
+                    <input type="checkbox"> thể thao
+                    <input type="checkbox"> Âm nhạc
+                    <input type="checkbox"> Đọc Sách <br>
+                    <input type="checkbox"> Lướt Web
+                    <input type="checkbox"> CHơi Game
+                    <input type="checkbox"> Điện Ảnh <br>
+                    <input type="checkbox">Du Lịch
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <input type="submit" value="Gửi Thông Tin"
+                </td>
+                <td>
+                    <input type="Reset" value=" Nhập Lại"
+
+                </td>
+            </tr>
+    </tr>
+</table>
+
+
+
 </body>
 </html>
