--- a/modulde1/ss3/bai tap/bt1phan2.html
+++ b/modulde1/ss3/bai tap/bt1phan2.html
@@ -2,9 +2,95 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>vietanhmyhan</title>
 </head>
 <body>
-$END$
+<table style="border: goldenrod" ; width="1045px">
+    <tr>
+        <td>
+            <form method="get" action="github.com"></form>
+            <h1 style="background:green">Đăng Ký Học Viên</h1>
+        </td>
+    </tr>
+</table>
+<fieldset
+    <table>
+        <tr>
+            <td>
+                <label>Họ Và Tên</label>
+            <td>
+                <input type="text">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>Ngày sinh</label>
+            <td>
+                <input type="text">
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <label>Giới Tính</label>
+            <td>
+                <input type="radio">Nam
+                <input type="radio"> Nữ
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <label> ĐỊa CHỉ</label>
+            <td>
+                <textarea cols="40" rows="4"></textarea>
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <label>LỚp</label>
+            <td>
+                <select name="Chọn lớp">
+                    <option value="TA">Tiếng Anh</option>
+                    <option value="T">Tiếng Hàn </option>
+                    <option value="TT">Tiếng Thái</option>
+                </select>
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <label>Email</label>
+            <td>
+                <input type="text" Email>
+
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <label>Điện Thoại</label>
+            <td>
+                <input type="text" SỐ Điện Thoại
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <input type="Submit" value="Đăng Ký"
+            </td>
+            <td>
+                <input type="Reset" value="Nhập Lại"
+            </td>
+        </tr>
+    </table>
+</table>
 </body>
 </html>
