--- a/modulde1/ss3/thuc hanh/thuc hanh 1.html
+++ b/modulde1/ss3/thuc hanh/thuc hanh 1.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>simpleform.html</title>
+
+
 </head>
 <body>
-$END$
+<table style="border:1px solid red">
+    <tr>
+        <td>
+
+<form method="get" action="simpleform.hyml"></form>
+<h2>Order Form</h2>
+<p>What would you like to buy?</p>
+<select>
+    <option value = " ">A</option>
+    <option>B (+  0.5$)</option>
+    <optoin>C (+ 0.5$) </optoin>
+</select>
+<p>How many would you like to order?</p>
+<input type="radio" name="rd"/> 1 - $10 <br/>
+<input type="=radio"n ame="rd"/> 2 - $20 <br/>
+<input type="radio"name="=rd"/> 3 - $30 <br>
+
+<p>Name <span style="color: red">*</span> </p>
+<input type= "text" name="firstname" placeholder="FirstName" size="10"/>
+<input type="text" name="lastname" placeholder="LastName" size="15/>"
+<p><br></br>Email</p>
+<input type="text" name="email" size="35">
+<p><br>Phone Number</p>
+<input type="text" name="phone1"size="5"/>
+<input type="text" name="phone2" size="5/">
+<input type="text" name="phone3" size="5"/>
+<p><input type="button" name="btSubmit" value="Submit"/></p>
+<style>
+    .wufoo{
+        font-family: "Lucia Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
+    }
+</style>
+<form method="get" action="simpleform.html" class="wufoo"
+</td>
+</tr>
+</table>
 </body>
 </html>
