--- a/modulde1/ss4/thuc hanh/thuc hanh 2.html
+++ b/modulde1/ss4/thuc hanh/thuc hanh 2.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <button type="button" onclick="showMessage();">CLick Me!</button>
+<script src="myJs.js"></script>
+
 </body>
 </html>
