--- a/modulde1/ss5/bai tap/bai tap 1.html
+++ b/modulde1/ss5/bai tap/bai tap 1.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<table>
+    <tr>
+        <td>Vật Lý</td>
+        <td>Hóa Học</td>
+        <td>Sinh Học</td>
+        <td><button onclick="Điểm tổng trung bình">Điểm tổng TB</button></td>
+    </tr>
+    <td><input name="" id="diemvatly"/></td>
+    <td><input name="" id="diemhoahoc"/></td>
+    <td><input name="" id="diemsinhhoc"/></td>
+   <td><input name="" id="diemtongtrungbinh"/></td>
+    <script>
+        function getValue():{
+            let a = document.getElementById('diemvatly').value;
+            let b = document.getElementById('diemhoahoc').value;
+            let c = document.getElementById('diemsinhhoc').value;
+            let t = (a+b+c)
+
+
+        }
+    </script>
+
+
+</table>
+
 </body>
 </html>
