--- a/modulde1/ss5/bai tap/bt1 1.html
+++ b/modulde1/ss5/bai tap/bt1 1.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a =parseInt(prompt("điểm môn Lý"));
+    let b =parseInt(prompt("điểm môn Hóa"));
+    let c =parseInt(prompt("điểm môn Sinh"));c
+    let t=c+b+a
+    let tb=t/3
+    alert(t)
+    alert(tb)
+</script>
+
 </body>
 </html>
