--- a/modulde1/ss5/thuc hanh/thuc hanh.html
+++ b/modulde1/ss5/thuc hanh/thuc hanh.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>hello</title>
 </head>
 <body>
-$END$
+<script>
+ var i=10;
+ var f=20.5;
+ var b=true;
+ var s="Hà Nội"
+
+     document.write("i= " + i);
+     document.write("<br/>");
+    document.write("f = " + f);
+ document.write("<br/>");
+ document.write("b = " + b);
+ document.write("<br/>");
+ document.write("s = "+ s);
+
+</script>
+
 </body>
 </html>
