--- a/modulde1/ss7/thuc hanh/thuc hanh 1.2.html
+++ b/modulde1/ss7/thuc hanh/thuc hanh 1.2.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <script>
-    for (let i = 0 ; i<=20 ; i++){
-        document.write(i);
-    }
+    let num = prompt("Enter Your Number");
+    let total = 0
+    let i = 1
+    for (; i<=num ; i= i +1 );
+    total= total + i ;
+    alert(total);
 
 
 </script>
