--- a/modulde1/ss7/thuc hanh/thuc hanh 2.html
+++ b/modulde1/ss7/thuc hanh/thuc hanh 2.html
@@ -6,17 +6,20 @@
 </head>
 <body>
 <script>
-    let num = prompt("ENter your number ");
-    let total = 0
-    let i = 1
-    for (; i <=num; i+=1) {
-        total = total + 1 ;
-        alert (total)
+    let num = prompt("Enter a number : ");
+    let total = 0 ;
+    while (num != -1){
+        num = prompt("Enter your number : ");
+        alert(number);
+        total += num
+        alert(total);
+
+
     }
 
 
-</script>
 
+</script>
 
 
 
