--- a/modulde1/ss7/luyen tap vong lap 1/bai 6.html
+++ b/modulde1/ss7/luyen tap vong lap 1/bai 6.html
@@ -7,15 +7,19 @@
 <body>
 <script>
 
-    let a=0
-    let b=0
-    let c=0
+    let a=0;
+    let b=0;
+    let c=0;
     while (a<=30){
-        if
-
+        if (b%7 ===0) {
+            a++;
+            c= c + b;
+            document.write(" "+ b + "<br>");
+        }
+          b++;
 
     }
-
+      document.write("Total =" + c);
 
 </script>
 
