--- a/modulde1/ss7/luyen tap vong lap 2/bai tap 4 ss2.html
+++ b/modulde1/ss7/luyen tap vong lap 2/bai tap 4 ss2.html
@@ -6,10 +6,14 @@
 </head>
 <body>
 <script>
-    for (let i = 1; i<=7;i++){
-        
-    }
+   for (let i=1;i<=7;i++){
+       for (j=1;j<=21;j++){
+           if (i===1|| j===1||| i===7|| j===21){
+               document.write
 
+           }
+       }
+   }
 </script>
 
 
