--- a/modulde1/ss7/luyen tap vong lap 2/bai tap 3 ss2.html
+++ b/modulde1/ss7/luyen tap vong lap 2/bai tap 3 ss2.html
@@ -8,7 +8,7 @@
 <script>
     for (let i=1;i<=5;i++) {
         for ( j=1 ;j<=i;j++){
-            document.write("*");
+            document.write("*"+"<b>");
 
         } document.write('<br>');
 
