--- a/modulde1/ss10/thuc hanh/adasd.html
+++ b/modulde1/ss10/thuc hanh/adasd.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a =[1,3,5,7,20]
+    alert(a.length)
+</script>
 </body>
 </html>
