--- a/modulde1/ss7/luyen tap vong lap 2/bai tap 4 ss2.html
+++ b/modulde1/ss7/luyen tap vong lap 2/bai tap 4 ss2.html
@@ -8,12 +8,16 @@
 <script>
    for (let i=1;i<=7;i++){
        for (j=1;j<=21;j++){
-           if (i===1|| j===1||| i===7|| j===21){
-               document.write
-
+           if (i===1|| j===1|| i===7||j===21){
+               document.write('*')
+           } else {
+               document.write('&nbsp&nbsp');
            }
        }
+       document.write('<br>');
    }
+
+
 </script>
 
 
