--- a/modulde1/ss7/luyen tap vong lap/bt 1.html
+++ b/modulde1/ss7/luyen tap vong lap/bt 1.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let sout=" ";
+    for (let i =1; i<100;i++) {
+        sout= sout + i + "<br>  "}
+        document.write(sout)
+        if (i=99){
+            document.write('da hoan thanh')
+        }
+
+
+
+</script>
+
+
 </body>
 </html>
