--- a/modulde1/ss8/bai tap/lt mang 1/bt 5.html
+++ b/modulde1/ss8/bai tap/lt mang 1/bt 5.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+let x = [];
+let a = [];
+for (let i = 0 ; i <7 ; i++){
+    x[i]= parseInt(prompt('Input your Number'));
+}
+document.write(x + "<br>");
+for (let i = 0 ; i< x.length ; i++){
+    if (x[i]<0){
+        a.push(x[i]);
+
+    }
+}
+document.write('so nguyen am: '+ a);
+document.write('so nguyen am : '+ a.length);
+</script>
+
 </body>
 </html>
