--- a/modulde1/ss8/bai tap/lt mang 2/bt 2.html
+++ b/modulde1/ss8/bai tap/lt mang 2/bt 2.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a = [ 'c', 's', 'c', '2', '6', '1' ];
+    let first = 0 ;
+    let last = a.length - 1;
+    while (first<last){
+        let b = a[first];
+        a[first]= a[last];
+        a[last]=b;
+        first++;
+        last--;
+    }
+   document.write(a)
+    let str= a.join(" ")
+    document.write("dao nguoc chuoi : "+ str)
+
+</script>
+
 </body>
 </html>
