--- a/modulde1/ss8/bai tap/lt mang 2/bt 3.html
+++ b/modulde1/ss8/bai tap/lt mang 2/bt 3.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let arr = [ 11,21,31,"hello"]
+    let count = 0
+    for (let i = 0 ; i< arr.length; i ++){
+
+        if (arr[i]/ 1 ===arr[i]){
+            count++
+        }
+    }
+    document.write('cac ki tu so :' + count)
+
+
+</script>
+
 </body>
 </html>
