--- a/modulde1/ss10/thuc hanh/xay dung lop hinh tron.html
+++ b/modulde1/ss10/thuc hanh/xay dung lop hinh tron.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+  class Circle{
+      constructor(radius) {
+          this.radius=radius
+      }
+      getRadius(){
+          return this.radius
+      }
+      getArea(){
+          return Math.PI * radius * radius;
+      }
+  }
+let circle=new Circle(2)
+    let radius= circle.getRadius()
+    let area = circle.getArea()
+  alert("radius: " + radius + "; area: " + area);
+</script>
+
 </body>
 </html>
