--- a/modulde1/ss8/bai tap/lt mang 1/BT3.html
+++ b/modulde1/ss8/bai tap/lt mang 1/BT3.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let number= [1,2,3,4,5,6,7,8,9,10,11];
+    let t = 0
+    let aver
+    let max = number[0]
+    for(i=0;i<number.length;i++) {
+        if (number[i] > max) {
+            max = number[i];
+        }
+
+        t = t + number[i];
+        aver = t / number.length;
+        // document.write('so lon nhat la'+ max);
+    }
+    document.write("so lon nhat la"+ max+'<br>')
+    document.write(t)
+    document.write('trung binh cong cua cac so la'+ aver);
+</script>
+
+
 </body>
 </html>
