--- a/modulde1/ss8/bai tap/lt mang 1/bt 2.html
+++ b/modulde1/ss8/bai tap/lt mang 1/bt 2.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let number=[1,2,3,4,5,6,7,8,9,11 ];
+    let max= number [0]
+    let index = 0
+    for(let i =1 ; i< number.length;i++){
+        if(number[i]>max){
+            max=number[i]
+            index=i
+        }
+    }document.write('so lon nhat la'+ max+'nam o vi tri'+index);
+
+
+</script>
+
 </body>
 </html>
