--- a/modulde1/ss8/bai tap/lt mang 1/bt 4.html
+++ b/modulde1/ss8/bai tap/lt mang 1/bt 4.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+
+  let x = []
+  for (i=0;i<5;i++) {
+      x[i]=parseInt(prompt('nhap so vao di'))
+
+  }
+document.write('x = ' + x  )
+    let first = 0;
+    let last = x.length - 1;
+    while (first < last) {
+        let b = x[first];
+        x[first] = x[last];
+        x[last] = b;
+        first++;
+        last--;
+    }
+    document.write("Đảo ngược x = [" + x + "]")
+
+</script>
+
 </body>
 </html>
