--- a/modulde1/ss8/bai tap/lt mang 1/bt 8.html
+++ b/modulde1/ss8/bai tap/lt mang 1/bt 8.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let x = [1,2,3,4,5,6,7,8];
+    let first = 0
+    let last = x.length - 1 ;
+    while(first<last){
+        let b = x[first];
+        x[first]=x[last];
+        x[last] = b;
+        first++
+        last--
+    }
+    document.write(x);
+
+
+
+</script>
+
 </body>
 </html>
