--- a/modulde1/ss8/bai tap/lt mang 2/bt 1.html
+++ b/modulde1/ss8/bai tap/lt mang 2/bt 1.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a = [[1,2,1,23], [8,11,99,4],[7,0,7,24],[1,3,4,5],[11,21,31]];
+    for (let i in a){
+        document.write( " <br>"+ 'row'+ i );
+        for (let j in a [i]){
+            document.write(" "+ a[i][j]);
+        }
+    }
+
+</script>
+
 </body>
 </html>
