--- a/modulde1/ss8/bai tap/lt mang 2/bt 4.html
+++ b/modulde1/ss8/bai tap/lt mang 2/bt 4.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let str = prompt("Nhập chuỗi 1")
+    document.write(str + "<br>")
+    let word = 0;
+    for (let i = 0; i < str.length - 1; i++) {
+        if (str[i] !== " " && str[i + 1] === " ") {
+            word++;
+        }
+    }
+    document.write("số từ trong chuỗi là: " + (word + 1));
+
+
+
+
+</script>
+
 </body>
 </html>
