--- a/modulde1/ss8/bai tap/lt mang 2/bt 5.html
+++ b/modulde1/ss8/bai tap/lt mang 2/bt 5.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let str1 = prompt('nhap so ')
+    let str2 = prompt('nhap so')
+    document.write('so o chuoi 1 ='+ str1 + '<br>'+ 'so o chuoi 2 ='+ str2 +'<br>');
+    flag=false;
+    if (str1===str2){
+        for (i=0;i<str1;i++){
+            if (str1[i]===str2[i]){
+                flag=true
+            // }else {
+            //     document.write('2 chuoi khong bang nhau')
+            //     break;
+            }
+        }
+    }else {
+        document.write('2 chuoi kh bang nhau');
+    }
+    if (flag===true){
+        document.write('2 chuoi bang nhau')
+    }
+
+
+
+</script>
+
 </body>
 </html>
